<resources>
    <string name="app_name">ComfortZone</string>
    <string name="username">username</string>
    <string name="password">password</string>
    <string name="create_account">Create account</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="welcome">Welcome!</string>
    <string name="introduction">ComfortZone will track your comfort zones for different temperature levels! A \'0\' represents the point where you are crazy cold! Similarly, a \'10\' represents a crazy hot degree. And \'5\' is your estimated perfect temperature!</string>
    <string name="what_is_your_0">What is your 0?</string>
    <string name="what_is_your_5">What is your 5?</string>
    <string name="what_is_your_10">What is your 10?</string>
    <string name="sign_in">Sign in</string>
    <string name="don_t_have_an_account">Don\'t have an account?&#160;</string>
    <string name="signup">Signup</string>
    <string name="hello">HELLO!</string>
    <string name="your_perfect_temperature_is">Your perfect temperature is:</string>
    <string name="confirm">Confirm</string>
    <string name="today_s_temperature">Today\'s temperature:</string>
    <string name="fahrenheit">°F</string>
    <string name="celsius">°C</string>
    <string name="divider">|</string>
    <string name="flight">Flight</string>
    <string name="input">Input</string>
    <string name="profile">Profile</string>
    <string name="how_comfortable_do_you_feel">How comfortable do you feel?</string>
    <string name="levels">0 for very very cold! \n5 for your perfect temperature! \n10 for very very hot!</string>
    <string name="submit">submit</string>
    <string name="delete">delete</string>
    <string name="comfort">Comfort:</string>
    <string name="temperature">Temperature:</string>
    <string name="cityIcon">cityIcon</string>
    <string name="cityId">cityId</string>
    <string name="filter_by_comfort_level">Filter by Comfort Level:</string>
    <string name="sort_by">Sort by...</string>
    <string name="search_for_a_city">Search for a city!</string>
    <string name="list_view">List View</string>
    <string name="map_view">Map View</string>
    <string name="saved_cities">Saved Cities:</string>
    <string name="book_a_flight">Book a Flight!</string>
    <string name="continue_with_facebook">Continue with Facebook</string>
    <string-array name="filter_array">
        <item>Alphabet: A-Z</item>
        <item>Temperature: Low to High</item>
        <item>Temperature: High to Low</item>
        <item>Distance: Nearest First</item>
        <item>Distance: Farthest First</item>
        <item>Population: Low to High</item>
        <item>Population: High to Low</item>
    </string-array>
    <string name="key_shared_pref_activity">comfortZoneUserPreferences</string>
    <string name="key_is_fahrenheit">isFahrenheit</string>
    <string name="radio_fahrenheit">My estimates are in Fahrenheit!</string>
    <string name="radio_celsius">They are in Celsius!</string>
    <string name="notification_content">How\'s the weather right now?</string>
    <string name="last_updated">Last Updated:&#160;</string>
    <string name="number_of_cities">Number of Cities:</string>
    <string name="logout">logout</string>
    <string name="notifications">Notifications</string>
    <string name="time_of_day">Time of day:</string>
    <string name="pick_notification">Pick a notification time!</string>
    <string name="how_frequent">How frequent:</string>
    <string name="every_15_minutes">Every 15 Minutes</string>
    <string name="every_half_hour">Every Half Hour</string>
    <string name="every_hour">Every Hour</string>
    <string name="every_half_day">Every Half Day</string>
    <string name="daily">Daily</string>
    <string name="set_frequency">Set Frequency</string>
    <string name="frequency_description">Choose how frequently you want your notifications!</string>
    <string name="OK">OK</string>
    <string name="cancel">Cancel</string>
    <string-array name="num_of_pins_array">
        <item>5</item>
        <item>10</item>
        <item>20</item>
        <item>50</item>
        <item>100</item>
        <item>All</item>
    </string-array>
    <string-array name="frequencyUnits">
        <item>Minutes</item>
        <item>Hours</item>
        <item>Days</item>
    </string-array>
</resources>