<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_flight"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_flight_24"
        android:title="@string/flight"
        app:showAsAction="ifRoom" />
    <item
        android:id="@+id/action_input"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_add_circle_24"
        android:title="@string/input"
        app:showAsAction="ifRoom"
        tools:showAsAction="always" />
    <item
        android:id="@+id/action_profile"
        android:enabled="true"
        android:icon="@drawable/ic_baseline_person_24"
        android:title="@string/profile"
        app:showAsAction="ifRoom" />
</menu>