<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/flCitiesList"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".flight.ui.FlightFragment">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/generalMargin"
        android:layout_marginTop="@dimen/titleMargin"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tvFilterDescription"
            android:layout_width="@dimen/textWidth"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/filter_by_comfort_level"
            android:textColor="@color/black"
            android:textSize="@dimen/miniTextSize" />

        <com.google.android.material.slider.RangeSlider
            android:id="@+id/rsComfortFilter"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:stepSize="1.0"
            android:valueFrom="0.0"
            android:valueTo="10.0"
            app:values="@array/initial_slider_values" />

    </androidx.appcompat.widget.LinearLayoutCompat>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/generalMargin">

        <TextView
            android:id="@+id/tvSortDescription"
            android:layout_width="@dimen/textWidth"
            android:layout_height="wrap_content"
            android:text="@string/sort_by"
            android:textColor="@color/black"
            android:textSize="@dimen/miniTextSize" />

        <Spinner
            android:id="@+id/spSort"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/generalMargin"
            android:textAlignment="center" />

    </LinearLayout>

    <EditText
        android:id="@+id/etSearchCity"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/generalMargin"
        android:ems="10"
        android:hint="@string/search_for_a_city"
        android:inputType="text"
        android:textSize="@dimen/miniTextSize" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/tgCityDisplay"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="end"
        android:layout_marginEnd="@dimen/generalMargin"
        app:selectionRequired="true"
        app:singleSelection="true">

        <Button
            android:id="@+id/btnList"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/list_view" />

        <Button
            android:id="@+id/btnMap"
            style="?attr/materialButtonOutlinedStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/map_view" />
    </com.google.android.material.button.MaterialButtonToggleGroup>


    <FrameLayout
        android:id="@+id/flViewsContainer"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

    </FrameLayout>

</LinearLayout>